update stories and indices

--- a/stories/es/0008_qué-estás-haciendo.html
+++ b/stories/es/0008_qué-estás-haciendo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Qué estás haciendo?</title>
+    <title>¿Qué estás haciendo?</title>
     <meta charset="UTF-8"><style type="text/css">
       body {
         font-family: sans-serif;
@@ -29,7 +29,7 @@
   <body>
 <div class='cover'><img src="https://global-asp.github.io/img/0008/01.jpg" />
 
-<h1 id="qu-ests-haciendo">Qué estás haciendo?</h1>
+<h1 id="qu-ests-haciendo">¿Qué estás haciendo?</h1>
 
 Nina Orange<br>Español</div>
 
@@ -42,7 +42,7 @@ Nina Orange<br>Español</div>
 
 <p><img src="https://global-asp.github.io/img/0008/03.jpg" /></p>
 
-<p>Está despidiendose.</p>
+<p>Está despidiéndose.</p>
 
 <div class="pagenum">2</div>
 <p style="page-break-after: always;"></p>
@@ -56,7 +56,7 @@ Nina Orange<br>Español</div>
 
 <p><img src="https://global-asp.github.io/img/0008/05.jpg" /></p>
 
-<p>Está estirando sus brazos.</p>
+<p>Está estirándose.</p>
 
 <div class="pagenum">4</div>
 <p style="page-break-after: always;"></p>
