--- a/stories/es/0008_qué-estás-haciendo_slides.html
+++ b/stories/es/0008_qué-estás-haciendo_slides.html
@@ -88,7 +88,7 @@
 <body>
 
 <section id="qué-estás-haciendo" class="slide level1">
-<h1>Qué estás haciendo?</h1>
+<h1>¿Qué estás haciendo?</h1>
 <center>
 <img src="https://global-asp.github.io/img/0008/01.jpg" />
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0008/03.jpg" /></p>
-<p>Está despidiendose.</p>
+<p>Está despidiéndose.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0008/05.jpg" /></p>
-<p>Está estirando sus brazos.</p>
+<p>Está estirándose.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -168,7 +168,7 @@
 </section>
 <section class="slide level1">
 
-<h2 id="qué-estás-haciendo-1">Qué estás haciendo?</h2>
+<h2 id="qué-estás-haciendo-1">¿Qué estás haciendo?</h2>
 Writer: Nina Orange<br> Illustrations: Wiehan de Jager<br> Translation: dohliam<br> Language: Spanish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
