--- a/stories/index.html
+++ b/stories/index.html
@@ -136,6 +136,11 @@
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0253</td>
+      <td><a href="http://africanstorybook.org/stories/my-picture-book-0">My Picture Book</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0287</td>
       <td><a href="http://africanstorybook.org/stories/mr-fly-and-mr-big-head">Mr Fly and Mr Big Head </a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
@@ -167,6 +172,8 @@
 <li class="toc"><a href="#norwegian">Norwegian [norsk]</a></li><br>
 
 <li class="toc"><a href="#spanish">Spanish [Español]</a></li><br>
+
+<li class="toc"><a href="#swedish">Swedish [Svenska]</a></li><br>
 
 <ol>
 </ol></div>
@@ -244,6 +251,13 @@
       <td style="text-align: center"><a href="/stories/yue/0078_超牛冒險記.html">HTML</a> · <a href="/stories/yue/0078_超牛冒險記_slides.html">Slideshow</a></td>
       <td><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.0/yue.zip">Github release</a> · <img src="https://avatars0.githubusercontent.com/u/559357?v=3&amp;s=24" alt="" /> <a href="https://www.dropbox.com/s/wb7smewm55zy51g/yue.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsOVo0LWxvbWJvZE0/view?usp=sharing">Google Drive</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0253</td>
+      <td>我嘅繪本</td>
+      <td style="text-align: center"><a href="/stories/yue/0253_我嘅繪本.html">HTML</a> · <a href="/stories/yue/0253_我嘅繪本_slides.html">Slideshow</a></td>
+      <td><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.0/yue.zip">Github release</a> · <img src="https://avatars0.githubusercontent.com/u/559357?v=3&amp;s=24" alt="" /> <a href="https://www.dropbox.com/s/wb7smewm55zy51g/yue.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsOVo0LWxvbWJvZE0/view?usp=sharing">Google Drive</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
@@ -338,6 +352,13 @@
       <td><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.0/zh.zip">Github release</a> · <img src="https://avatars0.githubusercontent.com/u/559357?v=3&amp;s=24" alt="" /> <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsbXhPZVI0QlpqUGs/view?usp=sharing">Google Drive</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
+    <tr>
+      <td>0253</td>
+      <td>我的绘本</td>
+      <td style="text-align: center"><a href="/stories/zh/0253_我的绘本.html">HTML</a> · <a href="/stories/zh/0253_我的绘本_slides.html">Slideshow</a></td>
+      <td><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.0/zh.zip">Github release</a> · <img src="https://avatars0.githubusercontent.com/u/559357?v=3&amp;s=24" alt="" /> <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsbXhPZVI0QlpqUGs/view?usp=sharing">Google Drive</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
   </tbody>
 </table>
 
@@ -403,6 +424,13 @@
       <td><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.0/eo.zip">Github release</a> · <img src="https://avatars0.githubusercontent.com/u/559357?v=3&amp;s=24" alt="" /> <a href="https://www.dropbox.com/s/dk511xogcxmgs16/eo.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsVzMwY2Utb3FZdzA/view?usp=sharing">Google Drive</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
+    <tr>
+      <td>0253</td>
+      <td>Mia bildlibro</td>
+      <td style="text-align: center"><a href="/stories/eo/0253_mia_bildlibro.html">HTML</a> · <a href="/stories/eo/0253_mia_bildlibro_slides.html">Slideshow</a></td>
+      <td><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.0/eo.zip">Github release</a> · <img src="https://avatars0.githubusercontent.com/u/559357?v=3&amp;s=24" alt="" /> <a href="https://www.dropbox.com/s/dk511xogcxmgs16/eo.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsVzMwY2Utb3FZdzA/view?usp=sharing">Google Drive</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
   </tbody>
 </table>
 
@@ -432,6 +460,13 @@
       <td style="text-align: center"><a href="/stories/ja/0009_猫ちゃんはどこですか.html">HTML</a> · <a href="/stories/ja/0009_猫ちゃんはどこですか_slides.html">Slideshow</a></td>
       <td><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.0/ja.zip">Github release</a> · <img src="https://avatars0.githubusercontent.com/u/559357?v=3&amp;s=24" alt="" /> <a href="https://www.dropbox.com/s/xh4sspixbmtuc66/ja.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsTldiajhTdl9yUDA/view?usp=sharing">Google Drive</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0253</td>
+      <td>私の絵本</td>
+      <td style="text-align: center"><a href="/stories/ja/0253_私の絵本.html">HTML</a> · <a href="/stories/ja/0253_私の絵本_slides.html">Slideshow</a></td>
+      <td><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.0/ja.zip">Github release</a> · <img src="https://avatars0.githubusercontent.com/u/559357?v=3&amp;s=24" alt="" /> <a href="https://www.dropbox.com/s/xh4sspixbmtuc66/ja.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsTldiajhTdl9yUDA/view?usp=sharing">Google Drive</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
@@ -515,6 +550,13 @@
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0253</td>
+      <td>Min billedbok</td>
+      <td style="text-align: center"><a href="/stories/no/0253_min_billedbok.html">HTML</a> · <a href="/stories/no/0253_min_billedbok_slides.html">Slideshow</a></td>
+      <td><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.0/no.zip">Github release</a> · <img src="https://avatars0.githubusercontent.com/u/559357?v=3&amp;s=24" alt="" /> <a href="https://www.dropbox.com/s/ona8gaetcci9m5f/no.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsVmtZTlhSZlhpQkU/view?usp=sharing">Google Drive</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0287</td>
       <td>Herr Flue og Herr Storhode</td>
       <td style="text-align: center"><a href="/stories/no/0287_herr-flue-og-herr-storhode.html">HTML</a> · <a href="/stories/no/0287_herr-flue-og-herr-storhode_slides.html">Slideshow</a></td>
@@ -539,10 +581,33 @@
   <tbody>
     <tr>
       <td>0008</td>
-      <td>Qué estás haciendo?</td>
+      <td>¿Qué estás haciendo?</td>
       <td style="text-align: center"><a href="/stories/es/0008_qué-estás-haciendo.html">HTML</a> · <a href="/stories/es/0008_qué-estás-haciendo_slides.html">Slideshow</a></td>
       <td><img src="https://avatars0.githubusercontent.com/u/559357?v=3&amp;s=24" alt="" /> <a href="https://www.dropbox.com/s/7ybh97ds8bsztnx/es.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9Esbsd0ZxRnBQdWdwZlE/view?usp=sharing">Google Drive</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+  </tbody>
+</table>
+
+   </ul>
+  <h3><a name='swedish'>Swedish [Svenska]</a></h3>
+   <ul><table>
+  <thead>
+    <tr>
+      <th>Story #</th>
+      <th>Story title</th>
+      <th style="text-align: center">View</th>
+      <th>Download</th>
+      <th>License</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>0009</td>
+      <td>Var är min katt?</td>
+      <td style="text-align: center"><a href="/stories/sv/0009_var-är-min-katt.html">HTML</a> · <a href="/stories/sv/0009_var-är-min-katt_slides.html">Slideshow</a></td>
+      <td><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="">Github release</a> · <img src="https://avatars0.githubusercontent.com/u/559357?v=3&amp;s=24" alt="" /> <a href="">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="">Google Drive</a></td>
+      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
   </tbody>
 </table>
