--- a/stories/no/0009_hvor-er-katten-min.html
+++ b/stories/no/0009_hvor-er-katten-min.html
@@ -8,6 +8,9 @@
         font-size: large;
         text-align: center;
       }
+      img {
+        max-width: 40%;
+      }
       .license {
         display: inline-block;
         font-size: small;
@@ -60,14 +63,14 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>norsk</div>
 
 <p><img src="https://global-asp.github.io/img/0009/06.jpg" /></p>
 
-<p>Er den ved siden av bøtten?</p>
+<p>Er den ved siden av bøtta?</p>
 
 <div class="pagenum">5</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0009/07.jpg" /></p>
 
-<p>Er den inne i kurv?</p>
+<p>Er den i kurven?</p>
 
 <div class="pagenum">6</div>
 <p style="page-break-after: always;"></p>
@@ -81,7 +84,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>norsk</div>
 
 <p><img src="https://global-asp.github.io/img/0009/09.jpg" /></p>
 
-<p>Her den er!</p>
+<p>Her er den!</p>
 
 <div class="pagenum">8</div>
 <p style="page-break-after: always;"></p>
