--- a/stories/no/0204_akatope.html
+++ b/stories/no/0204_akatope.html
@@ -35,14 +35,14 @@ Alice Kapolondo<br>norsk</div>
 
 <p><img src="https://global-asp.github.io/img/0204/02.jpg" /></p>
 
-<p>Det var en gang en gammel kvinne som alltid hadde ønsket å få et barn.</p>
+<p>Det var en gang en gammel dame som alltid hadde ønsket seg et barn.</p>
 
 <div class="pagenum">1</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0204/03.jpg" /></p>
 
-<p>Kvinnen tok den beste leirjorda hun kunne finne og begynte å lage en jente.</p>
+<p>Hun tok den beste leirjorda hun kunne finne og begynte å lage en jente.</p>
 
 <div class="pagenum">2</div>
 <p style="page-break-after: always;"></p>
@@ -56,14 +56,14 @@ Alice Kapolondo<br>norsk</div>
 
 <p><img src="https://global-asp.github.io/img/0204/05.jpg" /></p>
 
-<p>Den gamle kvinnen var veldig glad. Hun kalte jenta Akatope. Hun var veldig glad i Akatope.</p>
+<p>Den gamle damen var veldig glad. Hun kalte jenta Akatope. Hun var veldig glad i Akatope.</p>
 
 <div class="pagenum">4</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0204/06.jpg" /></p>
 
-<p>Akatope ble advart av sin gamle mor om at hun ikke måtte komme ut av hytta, men hun hørte ikke etter. Hver gang moren ikke var klar over det, snek AKatope seg ut for å leke med de andre barna.</p>
+<p>Akatope ble advart av sin gamle mor om at hun ikke måtte komme ut av hytta, men hun hørte ikke etter. Hver gang moren ikke var klar over det, snek Akatope seg ut for å leke med de andre barna.</p>
 
 <div class="pagenum">5</div>
 <p style="page-break-after: always;"></p>
@@ -77,7 +77,7 @@ Alice Kapolondo<br>norsk</div>
 
 <p><img src="https://global-asp.github.io/img/0204/08.jpg" /></p>
 
-<p>De andre barna løp til hyttene sine, men da Akatope løp til sin, begynte beina hennes å gå i oppløsning. Hun krøk seg sammen mellom buskene.</p>
+<p>De andre barna løp til hyttene sine, men da Akatope løp til sin, begynte beina hennes å gå i oppløsning. Hun krøkte seg sammen mellom buskene.</p>
 
 <div class="pagenum">7</div>
 <p style="page-break-after: always;"></p>
@@ -91,7 +91,7 @@ Alice Kapolondo<br>norsk</div>
 
 <p><img src="https://global-asp.github.io/img/0204/10.jpg" /></p>
 
-<p>Da den gamle kvinnen hørte hva some hadde hendt barnet hennes, gråt hun i flere dager. Landsbyboerne bestemte seg for å ta med seg en annen liten jente som hadde blitt foreldreløs til å ta Akatopes plass.</p>
+<p>Da den gamle damen hørte hva some hadde hendt barnet hennes, gråt hun i flere dager. Landsbyboerne bestemte seg for å ta med seg en annen liten jente som hadde blitt foreldreløs til å ta Akatopes plass.</p>
 
 <div class="pagenum">9</div>
 <p style="page-break-after: always;"></p>
