--- a/stories/no/0253_min_billedbok.html
+++ b/stories/no/0253_min_billedbok.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Serĉi akvon</title>
+    <title>Min billedbok</title>
     <meta charset="UTF-8"><style type="text/css">
       body {
         font-family: sans-serif;
@@ -22,48 +22,47 @@
         font-weight: bold;
       }
       .cover {
-        background-color: #D8852A;
+        background-color: #89C9CC;
       }
     </style>
   </head>
   <body>
-<div class='cover'><img src="https://global-asp.github.io/img/0007/01.jpg" />
+<div class='cover'><img src="https://global-asp.github.io/img/0253/01.jpg" />
 
-<h1 id="seri-akvon">Serĉi akvon</h1>
-<p>(Ranoj ŝatas malvarman akvon.)</p>
+<h1 id="min-billedbok">Min billedbok</h1>
 
-Augustine Napagi<br>Esperanto</div>
+Oku Modesto<br>norsk</div>
 
-<p><img src="https://global-asp.github.io/img/0007/02.jpg" /></p>
+<p><img src="https://global-asp.github.io/img/0253/02.jpg" /></p>
 
-<p>Kie troveblas akvo?</p>
+<p>En jente</p>
 
 <div class="pagenum">1</div>
 <p style="page-break-after: always;"></p>
 
-<p><img src="https://global-asp.github.io/img/0007/03.jpg" /></p>
+<p><img src="https://global-asp.github.io/img/0253/03.jpg" /></p>
 
-<p>Ĉu estas akvo en la poto?</p>
+<p>Fugl</p>
 
 <div class="pagenum">2</div>
 <p style="page-break-after: always;"></p>
 
-<p><img src="https://global-asp.github.io/img/0007/04.jpg" /></p>
+<p><img src="https://global-asp.github.io/img/0253/04.jpg" /></p>
 
-<p>Ĝi estas tro varma!</p>
+<p>Løve</p>
 
 <div class="pagenum">3</div>
 <p style="page-break-after: always;"></p>
 
-<p><img src="https://global-asp.github.io/img/0007/05.jpg" /></p>
+<p><img src="https://global-asp.github.io/img/0253/05.jpg" /></p>
 
-<p>Ĉu la akvo tie estas malvarma?</p>
+<p>Katt</p>
 
 <div class="pagenum">4</div>
 <p style="page-break-after: always;"></p>
 
-<p>Writer: Augustine Napagi<br />Illustrations: Hélder de Paz Alexandre<br />Translation: dohliam<br />Language: Esperanto</p>
-<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/looking-water">here</a>
+<p>Writer: Oku Modesto<br />Illustrations: Rob Owen, Marleen Visser, Katrien Coetzer, Wiehan de Jager, Karen Lilje, Catherine Groenewald, Alice Toich<br />Translation: dohliam<br />Language: Norwegian</p>
+<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/my-picture-book-0">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
 
