--- a/stories/yue/0002_睇吓農場動物.html
+++ b/stories/yue/0002_睇吓農場動物.html
@@ -84,7 +84,7 @@ Jenny Katz<br>粵語</div>
 
 <p><img src="https://global-asp.github.io/img/0002/09.jpg" /></p>
 
-<p>農夫就話“噓噓”。</p>
+<p>農夫就話“殊”。</p>
 
 <div class="pagenum">8</div>
 <p style="page-break-after: always;"></p>
