--- a/stories/no/0008_hva-gjør-du.html
+++ b/stories/no/0008_hva-gjør-du.html
@@ -8,6 +8,9 @@
         font-size: large;
         text-align: center;
       }
+      img {
+        max-width: 40%;
+      }
       .license {
         display: inline-block;
         font-size: small;
