--- a/stories/no/0009_hvor-er-katten-min_slides.html
+++ b/stories/no/0009_hvor-er-katten-min_slides.html
@@ -9,7 +9,7 @@
   /* A section is a slide. It's size is 800x600, and this will never change */
   section {
       font-family: Arial, serif;
-      font-size: 20pt;
+      font-size: 14pt;
       text-align: center;
     }
   address, blockquote, dl, fieldset, form, h1, h2, h3, h4, h5, h6, hr, ol, p, pre, table, ul, dl { padding: 10px 20px 10px 20px; }
@@ -21,7 +21,7 @@
     margin: 10px 10px 10px 50px;
   }
   img {
-    width: 60%;
+    width: 40%;
   }
   .license {
     font-size: small;
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0009/06.jpg" /></p>
-<p>Er den ved siden av bøtten?</p>
+<p>Er den ved siden av bøtta?</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0009/07.jpg" /></p>
-<p>Er den inne i kurv?</p>
+<p>Er den i kurven?</p>
 <center>
 <strong>6</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0009/09.jpg" /></p>
-<p>Her den er!</p>
+<p>Her er den!</p>
 <center>
 <strong>8</strong>
 </center>
