--- a/stories/no/0253_min_billedbok_slides.html
+++ b/stories/no/0253_min_billedbok_slides.html
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="kion-vi-faras" class="slide level1">
-<h1>Kion vi faras?</h1>
+<section id="min-billedbok" class="slide level1">
+<h1>Min billedbok</h1>
 <center>
-<img src="https://global-asp.github.io/img/0008/01.jpg" />
+<img src="https://global-asp.github.io/img/0253/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0008/02.jpg" /></p>
-<p>Mi kantas.</p>
+<p><img src="https://global-asp.github.io/img/0253/02.jpg" /></p>
+<p>En jente</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0008/03.jpg" /></p>
-<p>Ŝi mansignas.</p>
+<p><img src="https://global-asp.github.io/img/0253/03.jpg" /></p>
+<p>Fugl</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0008/04.jpg" /></p>
-<p>Mi aplaŭdas.</p>
+<p><img src="https://global-asp.github.io/img/0253/04.jpg" /></p>
+<p>Løve</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0008/05.jpg" /></p>
-<p>Ŝi streĉas la brakojn.</p>
+<p><img src="https://global-asp.github.io/img/0253/05.jpg" /></p>
+<p>Katt</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,48 +132,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0008/06.jpg" /></p>
-<p>Li vokas.</p>
-<center>
-<strong>5</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://global-asp.github.io/img/0008/07.jpg" /></p>
-<p>Mi respondas.</p>
-<center>
-<strong>6</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://global-asp.github.io/img/0008/08.jpg" /></p>
-<p>Ŝi aŭskultas.</p>
-<center>
-<strong>7</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://global-asp.github.io/img/0008/09.jpg" /></p>
-<p>Kion vi faras?</p>
-<center>
-<strong>8</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="kion-vi-faras-1">Kion vi faras?</h2>
-Writer: Nina Orange<br> Illustrations: Wiehan de Jager<br> Translation: dohliam<br> Language: Esperanto<br>
+<h2 id="min-billedbok-1">Min billedbok</h2>
+Writer: Oku Modesto<br> Illustrations: Rob Owen, Marleen Visser, Katrien Coetzer, Wiehan de Jager, Karen Lilje, Catherine Groenewald, Alice Toich<br> Translation: dohliam<br> Language: Norwegian<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/what-are-you-doing'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/my-picture-book-0'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
