--- a/stories/no/0287_herr-flue-og-herr-storhode.html
+++ b/stories/no/0287_herr-flue-og-herr-storhode.html
@@ -56,7 +56,7 @@ Dorothy Fetaru<br>norsk</div>
 
 <p><img src="https://global-asp.github.io/img/0287/05.jpg" /></p>
 
-<p>De kom til en elvebredde, og begynte å krangle.</p>
+<p>De kom til en elvebredde og begynte å krangle.</p>
 
 <p>Herr Flue sa, “du kan ikke hoppe over denne elva.”
 “Jo, jeg kan det! Det er du som ikke kan!” svarte herr Storhode.</p>
@@ -75,7 +75,7 @@ Så her Flue fløy over elva.</p>
 
 <p><img src="https://global-asp.github.io/img/0287/07.jpg" /></p>
 
-<p>Så hoppet her Storhode inn i elva. Men hodet hans var så stort at han begynte å synke.</p>
+<p>Så hoppet herr Storhode inn i elva. Men hodet hans var så stort at han begynte å synke.</p>
 
 <div class="pagenum">6</div>
 <p style="page-break-after: always;"></p>
