--- a/stories/no/0287_herr-flue-og-herr-storhode_slides.html
+++ b/stories/no/0287_herr-flue-og-herr-storhode_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0287/05.jpg" /></p>
-<p>De kom til en elvebredde, og begynte å krangle.</p>
+<p>De kom til en elvebredde og begynte å krangle.</p>
 <p>Herr Flue sa, &quot;du kan ikke hoppe over denne elva.&quot; &quot;Jo, jeg kan det! Det er du som ikke kan!&quot; svarte herr Storhode.</p>
 <center>
 <strong>4</strong>
@@ -143,7 +143,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0287/07.jpg" /></p>
-<p>Så hoppet her Storhode inn i elva. Men hodet hans var så stort at han begynte å synke.</p>
+<p>Så hoppet herr Storhode inn i elva. Men hodet hans var så stort at han begynte å synke.</p>
 <center>
 <strong>6</strong>
 </center>
