--- a/stories/sv/0009_var-är-min-katt.html
+++ b/stories/sv/0009_var-är-min-katt.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>猫ちゃんはどこですか。</title>
+    <title>Var är min katt?</title>
     <meta charset="UTF-8"><style type="text/css">
       body {
         font-family: sans-serif;
@@ -29,67 +29,67 @@
   <body>
 <div class='cover'><img src="https://global-asp.github.io/img/0009/01.jpg" />
 
-<h1 id="section">猫ちゃんはどこですか。</h1>
+<h1 id="var-r-min-katt">Var är min katt?</h1>
 
-Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>日本語</div>
+Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Svenska</div>
 
 <p><img src="https://global-asp.github.io/img/0009/02.jpg" /></p>
 
-<p>猫ちゃんはどこですか。</p>
+<p>Var är min katt?</p>
 
 <div class="pagenum">1</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0009/03.jpg" /></p>
 
-<p>ベッドの下ですか。</p>
+<p>Är den under sängen?</p>
 
 <div class="pagenum">2</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0009/04.jpg" /></p>
 
-<p>とだなの上ですか。</p>
+<p>Är den ovanpå skåpet?</p>
 
 <div class="pagenum">3</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0009/05.jpg" /></p>
 
-<p>ソファーの後ろですか。</p>
+<p>Er den bak soffan?</p>
 
 <div class="pagenum">4</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0009/06.jpg" /></p>
 
-<p>ごみ箱のとなりですか。</p>
+<p>Er den bredvid av hinken?</p>
 
 <div class="pagenum">5</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0009/07.jpg" /></p>
 
-<p>かごの中ですか。</p>
+<p>Er den i korgen?</p>
 
 <div class="pagenum">6</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0009/08.jpg" /></p>
 
-<p>家の外ですか。</p>
+<p>Er den utanför huset?</p>
 
 <div class="pagenum">7</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0009/09.jpg" /></p>
 
-<p>ここにいます！</p>
+<p>Här är den!</p>
 
 <div class="pagenum">8</div>
 <p style="page-break-after: always;"></p>
 
-<p>Writer: Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br />Illustrations: Bronwen Heath, Anonymous<br />Translation: dohliam<br />Language: Japanese</p>
+<p>Writer: Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br />Illustrations: Bronwen Heath, Anonymous<br />Translation: Espen Stranger-Johannessen<br />Language: Swedish</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/where-my-cat">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
