--- a/stories/yue/0002_睇吓農場動物_slides.html
+++ b/stories/yue/0002_睇吓農場動物_slides.html
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0002/09.jpg" /></p>
-<p>農夫就話“噓噓”。</p>
+<p>農夫就話“殊”。</p>
 <center>
 <strong>8</strong>
 </center>
