add sv pkg links

--- a/stories/index.html
+++ b/stories/index.html
@@ -92,7 +92,7 @@
     </tr>
     <tr>
       <td>0004</td>
-      <td><a href="http://africanstorybook.org/stories/goat-dog-and-cow-0">Goat, Dog and Cow</a></td>
+      <td><a href="http://africanstorybook.org/stories/goat-dog-and-cow">Goat, Dog and Cow</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
@@ -606,7 +606,7 @@
       <td>0009</td>
       <td>Var är min katt?</td>
       <td style="text-align: center"><a href="/stories/sv/0009_var-är-min-katt.html">HTML</a> · <a href="/stories/sv/0009_var-är-min-katt_slides.html">Slideshow</a></td>
-      <td><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="">Github release</a> · <img src="https://avatars0.githubusercontent.com/u/559357?v=3&amp;s=24" alt="" /> <a href="">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="">Google Drive</a></td>
+      <td><img src="https://avatars0.githubusercontent.com/u/559357?v=3&amp;s=24" alt="" /> <a href="https://www.dropbox.com/s/u9o5vfvq09o857b/sv.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsNEVzYlpFTEZnc0E/view?usp=sharing">Google Drive</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
   </tbody>
