--- a/about/index.html
+++ b/about/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Translating African Storybook Project stories into all the languages of the world.
 ">
 
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="css/main.css">
   <link rel="canonical" href="https://global-asp.github.io//about/">
   <link rel="alternate" type="application/rss+xml" title="Global African Storybook Project" href="https://global-asp.github.io//feed.xml" />
 </head>
@@ -20,7 +20,7 @@
 
     <header class="site-header">
   <div class="wrapper">
-<a href="http://global-asp.github.io"><img src="/logo.png" alt="Global ASP logo" border="0" /></a>
+<a href="http://global-asp.github.io"><img src="logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
   <div class="wrapper">
 
