--- a/stories/no/0253_min_billedbok_slides.html
+++ b/stories/no/0253_min_billedbok_slides.html
@@ -96,7 +96,7 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://global-asp.github.io/img/0253/02.jpg" /></p>
+<p><img src="https://global-asp.github.io/img/0253/02.jpg" style="width:20%;"/></p>
 <p>En jente</p>
 <center>
 <strong>1</strong>
