da, sv: corrections

--- a/stories/index.html
+++ b/stories/index.html
@@ -227,7 +227,7 @@
 
 <li class="toc"><a href="#chinese-mandarin">Chinese (Mandarin) [中文]</a></li><br>
 
-<li class="toc"><a href="#danish">Danish [Dansk]</a></li><br>
+<li class="toc"><a href="#danish">Danish [dansk]</a></li><br>
 
 <li class="toc"><a href="#esperanto">Esperanto [Esperanto]</a></li><br>
 
@@ -243,7 +243,7 @@
 
 <li class="toc"><a href="#spanish">Spanish [Español]</a></li><br>
 
-<li class="toc"><a href="#swedish">Swedish [Svenska]</a></li><br>
+<li class="toc"><a href="#swedish">Swedish [svenska]</a></li><br>
 
 <ol>
 </ol></div>
@@ -538,7 +538,7 @@
 </table>
 
    </ul>
-  <h3><a name='danish'>Danish [Dansk]</a></h3>
+  <h3><a name='danish'>Danish [dansk]</a></h3>
    <ul><table>
   <thead>
     <tr>
@@ -918,7 +918,7 @@
 </table>
 
    </ul>
-  <h3><a name='swedish'>Swedish [Svenska]</a></h3>
+  <h3><a name='swedish'>Swedish [svenska]</a></h3>
    <ul><table>
   <thead>
     <tr>
